[package]
name = "noohoot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rocket = { features = ["secrets", "tls", "json", "uuid"] }
uuid = {features = ["v4"]}
